syntax = "proto3";

option java_package = "com.huasheng.sa.quant.open.sdk.protobuf.common.msg";
option java_outer_classname = "HeartBeatProto";
message HeartBeat {

}